--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,12 +1,11 @@
 header {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
-    display: flex;
-    align-items: center;
-}
-
-header .logo {
-    margin-left: 20px;
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border-bottom: 1px solid #CCCCCC;
+	background-image: url("../images/logo.png");
+	background-position: left 20px top 50%;
+	background-repeat: no-repeat;
+	display: flex;
+	align-items: center;
 }
