--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,82 +1,77 @@
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
 }
 
 button {
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    margin: 1% 30px;
-    float: right;
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	border: none;
+	border-radius: 4px;
+	margin: 1% 30px;
+	float: right;
 }
 
 button:hover {
-    opacity: 90%;
+	opacity: 90%;
 }
 
 .locations,
 .amenities {
-    height: 100%;
-    width: 25%;
-    float: left;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+	height: 100%;
+	width: 25%;
+	float: left;
 }
 
 .locations {
-    border-right: 1px solid #DDDDDD;
+	border-right: 1px solid #DDDDDD;
 }
 
 .locations h3,
 .amenities h3 {
-    font-weight: 600;
-    font-size: 16px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
+	font-weight: 600;
+	font-size: 16px;
+	margin-bottom: 0px;
+	text-align: left;
+	margin-left: 30px;
 }
 
 .locations h4,
 .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: left;
-    margin-left: 30px;
+	font-weight: 400;
+	font-size: 14px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	text-align: left;
+	margin-left: 30px;
 }
 
 .popover {
-    display: none;
-    background-color: #FAFAFA;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    margin-top: 20px;
-    position: relative;
+	display: none;
+	background-color: #FAFAFA;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	margin-top: 20px;
+	position: relative;
 }
 
 .popover h2 {
-    font-size: 24px;
-    margin: 0;
+	font-size: 16px;
+	margin: 0;
 }
 
 .popover li {
-    list-style-type: none;
-    margin: 20px 0;
-}
-
-.popover li ul {
-    padding-left: 20px;
+	list-style-type: none;
+	margin: 10px 0;
 }
 
 .locations:hover .popover,
 .amenities:hover .popover {
-    display: block;
+	display: block;
 }
